[package]
name = "k8s-port-forward"
version = "0.1.0"
edition = "2021"
description = "A TUI utility for Kubernetes port-forwarding with improved ergonomics"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
console = "0.15"
indicatif = "0.17"
futures = "0.3"
thiserror = "1.0"
chrono = "0.4"
colored_json = "0.1"
ratatui = "0.26.1"
crossterm = "0.27.0"
